# sparta

./: .replit  iris.json  main.py  pyproject.toml
